--- a/CSS/proyectofinal.css
+++ b/CSS/proyectofinal.css
@@ -165,7 +165,7 @@ body {
     padding: 5px 5px 5px 5px;
     border: 2px solid #566890;
     width: 80%;
-    height: 80%;
+    height: 500px;
 
 
 }
@@ -189,7 +189,8 @@ body {
 
 
 .inspoinicio img {
-    width: 70%;
+    width: 80%;
+    height: 80%;
     padding: 1px;
     margin: 1px 1px 1px 1px;
 
@@ -199,18 +200,25 @@ body {
 
 
 
+
+    
+    
+
+
+.contenido_inspoinicio_col{
+    display: flex;
+    flex-direction: column;
+}
+
 .inspoinicio p {
     color: black;
     font-weight: 200;
     padding: 10px;
     margin: 10px;
     display: inline;
-    width: 300px;
-    height: 500px;
-
+    width: 150px;
+    flex-grow: 1;
 }
-
-
 
 
 
