--- a/CSS/proyectofinal.css
+++ b/CSS/proyectofinal.css
@@ -366,16 +366,25 @@ textarea {
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-between;
 }
-
+.receta_d_s{
+    margin-left: 30px;
+    margin-right: 30px;
+}
 .receta_d_s h2 {
     font-size: 40px;
     color: #566890;
     font-weight: 400;
     text-decoration: underline;
+
+
 }
 
 .receta_d_s p{
     font-weight: 300;
+}
+
+.receta_d_s img{
+    border: 2px solid #566890;
 }
 
 .tiempoprep li{
