--- a/CSS/proyectofinal.css
+++ b/CSS/proyectofinal.css
@@ -76,13 +76,13 @@ body {
     color: #566890;
     font-size: 4rem;
     font-weight: 300;
-margin:auto;
+    margin: auto;
     width: 700px;
     height: 80px;
     margin-bottom: 5px;
     text-align: center;
-    
-    
+
+
 }
 
 
@@ -168,15 +168,10 @@ margin:auto;
     padding: 5px 5px 5px 5px;
     border: 2px solid #566890;
     width: 80%;
-    height: 500px;
+
 
 
 }
-
-.contenido_inspoinicio {
-    display: flex;
-}
-
 
 .inspoinicio h3 {
     font-size: 40px;
@@ -187,30 +182,26 @@ margin:auto;
 
 
 }
-
-
-
+.contenido_inspoinicio {
+    display: flex;
+}
 
 .inspoinicio img {
-    width: 80%;
-    height: 80%;
+
+  width: 70%;
+  height: auto;
     padding: 1px;
     margin: 1px 1px 1px 1px;
 
 }
 
 
-
-
-
-
-
-
-
-
-.contenido_inspoinicio_col {
+.contenido_inspoinicio_col 
+{
+    flex-basis:30%;
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
 }
 
 .inspoinicio p {
@@ -219,15 +210,8 @@ margin:auto;
     padding: 10px;
     margin: 10px;
     display: inline;
-    width: 150px;
     flex-grow: 1;
 }
-
-
-
-
-
-
 
 
 
@@ -335,6 +319,11 @@ textarea {
 
 /*Recetas Saladas*/
 
+.contenedor {
+    width: 80%;
+    margin: auto;
+}
+
 .elemento_galeriarecetas {
     display: flex;
     background-color: rgba(226, 218, 176, 0.6);
@@ -367,12 +356,15 @@ textarea {
 .galeriarecetas {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-content: space-between;
+    justify-items: center;
+
 }
 
 .receta_d_s {
     margin-left: 30px;
     margin-right: 30px;
+
+
 }
 
 .receta_d_s h2 {
@@ -381,20 +373,29 @@ textarea {
     font-weight: 400;
     text-decoration: underline;
     margin-bottom: 10px;
+    margin-left: 100px;
 
 
 }
 
 .receta_d_s p {
     font-weight: 300;
+    width: 80%;
+    margin: auto;
+
 }
 
 .receta_d_s img {
     border: 2px solid #566890;
+    margin-left: 100px;
+
+
 }
 
 .tiempoprep li {
     font-weight: 300;
+    width: 80%;
+    margin: auto;
 
 
 }
