--- a/SCSS/estilos.scss
+++ b/SCSS/estilos.scss
@@ -1,8 +1,5 @@
 /*# sourceMappingURL=estilos.css.map */
-* {
-    margin: none;
-    padding: none;
-}
+@import "reseteo";
 
 body {
     background-image: url(../imagenes.html/Fondomargaritas.jpeg);
@@ -149,7 +146,6 @@ body {
     padding: 5px 5px 5px 5px;
     border: 2px solid #566890;
     width: 100%;
-
 }
 
 #inspodelmes {
@@ -162,8 +158,6 @@ body {
     padding: 1px;
     margin: 1px;
     text-align: center;
-
-
 }
 
 .contenido_inspoinicio {
@@ -404,46 +398,8 @@ ol {
 }
 
 .articuloblog iframe {
-    border-radius: 12px;
+    border-radius: 13px;
     ;
 }
 
-
-
-
-
-/*RESPONSIVE PARA CELULAR*/
-@media screen and (max-width: 450px) {
-
-    .container {
-        width: 80%;
-    }
-
-
-
-    #lacocinademargarita {
-        width: 100%;
-        font-size: 51px;
-        justify-content: center;
-    }
-
-    .menuppal ul {
-        flex-direction: column;
-        height: 180px;
-        width: 100%;
-        
-
-    }
-    .recetainicio {
-        margin: auto;
-  
-    }
-
-    .galeriarecetas {
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: center;
-
-    }
- 
-}
+@import "mediaqueries";
