--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -10,17 +10,18 @@ body {
   font-family: 'Montserrat', sans-serif; }
 
 .container {
-  max-width: 1100px;
   width: 90%;
   margin: auto; }
 
 #lacocinademargarita {
-  font-size: 5rem;
+  margin:auto;
+  font-size: 15vh;
   text-align: center;
   color: #566890;
   background-color: whitesmoke;
   font-weight: 200;
-  width: 100%; }
+  width: 100%;
+}
 
 .menuppal ul {
   width: 100%;
@@ -29,7 +30,7 @@ body {
   background-color: #f2e18d;
   height: 60px;
   /*cuanto quiero que cubra el color del fondo*/
-  justify-content: space-around;
+  justify-content: space-between;
   /*para que queden todos con  el mismo espacio*/
   align-items: center;
   /* para alinear al medio los items del menu*/ }
@@ -317,8 +318,7 @@ ol {
     width: 80%; }
   #lacocinademargarita {
     width: 100vw;
-    font-size: 51px;
-    justify-content: center; }
+    font-size: 51px; }
   .seccioninicio h2 {
     font-size: 40px; }
   .menuppal ul {
