--- a/SCSS/estilos.scss
+++ b/SCSS/estilos.scss
@@ -22,7 +22,7 @@ body {
     background-color: whitesmoke;
     font-weight: 200;
     width:100%;
-    border: 1px solid black;
+
 }
 
 
@@ -36,6 +36,7 @@ body {
     justify-content: space-between;
     /*para que queden todos con  el mismo espacio*/
     align-items: center;
+    padding:0;
     /* para alinear al medio los items del menu*/
 
 }
@@ -44,6 +45,8 @@ body {
 .elementomenu {
     text-decoration: none;
     color: #566890;
+    padding:0;
+    margin:10px;
     /*al convertirla en bloque hago que ocupe el espacio que tiene su contnendor adre que es li*/
 }
 
