--- a/SCSS/estilos.scss
+++ b/SCSS/estilos.scss
@@ -33,7 +33,7 @@ body {
     background-color: #f2e18d;
     height: 60px;
     /*cuanto quiero que cubra el color del fondo*/
-    justify-content: space-between;
+    justify-content: space-around;
     /*para que queden todos con  el mismo espacio*/
     align-items: center;
     padding:0;
