--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -260,9 +260,10 @@ textarea {
   grid-template-columns: repeat(3, 1fr);
   justify-items: center; }
 
+/*RECETAS DULCES Y SALADAS CON PREPARACION*/
 .receta_d_s {
-  margin-left: 30px;
-  margin-right: 30px; }
+  margin: auto;
+  width: 80%; }
 
 .receta_d_s h2 {
   font-size: 40px;
@@ -270,7 +271,9 @@ textarea {
   font-weight: 400;
   text-decoration: underline;
   margin-bottom: 10px;
-  margin-left: 100px; }
+  margin: auto;
+  text-align: center;
+  width: 100%; }
 
 .receta_d_s p {
   font-weight: 300;
@@ -279,7 +282,8 @@ textarea {
 
 .receta_d_s img {
   border: 2px solid #566890;
-  margin-left: 100px; }
+  height: auto;
+  width: 60vw; }
 
 .tiempoprep li {
   font-weight: 300;
