--- a/SCSS/estilos.scss
+++ b/SCSS/estilos.scss
@@ -32,6 +32,7 @@ body {
     list-style: none;
     background-color: #f2e18d;
     height: 60px;
+
     /*cuanto quiero que cubra el color del fondo*/
     justify-content: space-around;
     /*para que queden todos con  el mismo espacio*/
@@ -331,12 +332,10 @@ textarea {
     justify-items: center;
 
 }
-
+  /*RECETAS DULCES Y SALADAS CON PREPARACION*/
 .receta_d_s {
-    margin-left: 30px;
-    margin-right: 30px;
-
-
+  margin:auto;
+  width:80%
 }
 
 .receta_d_s h2 {
@@ -345,7 +344,9 @@ textarea {
     font-weight: 400;
     text-decoration: underline;
     margin-bottom: 10px;
-    margin-left: 100px;
+    margin:auto;
+    text-align: center;
+    width: 100%;
 
 
 }
@@ -359,7 +360,9 @@ textarea {
 
 .receta_d_s img {
     border: 2px solid #566890;
-    margin-left: 100px;
+    height: auto;
+    width: 60vw;
+    
 
 
 }
