--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -49,7 +49,7 @@ body {
   font-size: 4rem;
   font-weight: 300;
   margin: auto;
-  width: 100%;
+  width: 80%;
   margin-bottom: 5px;
   text-align: center; }
 
@@ -61,14 +61,14 @@ body {
   text-align: center;
   color: #566890; }
 
+.seccioninicio a {
+  color: #566890;
+  text-decoration: none; }
+
 .img-index {
   width: 280px;
   height: auto;
   margin: auto; }
-
-.seccioninicio a {
-  color: #566890;
-  text-decoration: none; }
 
 .recetas_inicio {
   display: flex;
@@ -86,15 +86,14 @@ body {
   height: 500px;
   display: flex;
   flex-direction: column; }
-
-.recetainicio p {
-  color: #000000;
-  font-size: 1rem;
-  font-weight: 300;
-  padding: 2px;
-  margin: 2px;
-  flex-grow: 1;
-  /*hago que el boton me quede lo mas abajo*/ }
+  .recetainicio p {
+    color: #000000;
+    font-size: 1rem;
+    font-weight: 300;
+    padding: 2px;
+    margin: 2px;
+    flex-grow: 1;
+    /*hago que el boton me quede lo mas abajo*/ }
 
 .botonreceta {
   color: #566890;
@@ -108,10 +107,9 @@ body {
   margin-left: 5px;
   /*para que me quede el boton a la derecha en vez que a la ozquierda*/
   transition: 0.3s; }
-
-.botonreceta:hover {
-  transform: scale(1.1);
-  border: 2px solid #566890; }
+  .botonreceta:hover {
+    transform: scale(1.1);
+    border: 2px solid #566890; }
 
 .inspoinicio {
   background-color: #e2dab0;
@@ -120,48 +118,44 @@ body {
   padding: 5px 5px 5px 5px;
   border: 2px solid #566890;
   width: 100%; }
+  .inspoinicio h3 {
+    font-size: 2.5rem;
+    padding: 1px;
+    margin: 1px;
+    text-align: center; }
+  .inspoinicio img {
+    flex-basis: 70%;
+    width: 100%;
+    height: auto;
+    padding: 1px;
+    margin: 1px 1px 1px 1px; }
+  .inspoinicio p {
+    color: black;
+    font-weight: 200;
+    padding: 10px;
+    margin: 10px;
+    display: inline;
+    flex-grow: 1; }
 
 #inspodelmes {
   margin-top: 40px;
   margin-bottom: 20px; }
 
-.inspoinicio h3 {
-  font-size: 2.5rem;
-  padding: 1px;
-  margin: 1px;
-  text-align: center; }
-
 .contenido_inspoinicio {
   display: flex;
   flex-direction: column; }
-
-.inspoinicio img {
-  flex-basis: 70%;
-  width: 100%;
-  height: auto;
-  padding: 1px;
-  margin: 1px 1px 1px 1px; }
 
 .contenido_inspoinicio_col {
   flex-basis: 30%;
   display: flex;
   flex-direction: column; }
 
-.inspoinicio p {
-  color: black;
-  font-weight: 200;
-  padding: 10px;
-  margin: 10px;
-  display: inline;
-  flex-grow: 1; }
-
 footer {
   text-align: center;
   font-size: 12px;
   color: black; }
-
-footer a {
-  color: black; }
+  footer a {
+    color: black; }
 
 .listarecetas img {
   width: 300px;
@@ -177,20 +171,18 @@ footer a {
   margin: auto;
   color: #566890;
   font-weight: 300; }
+  .formulariocontacto label {
+    display: block;
+    padding-bottom: 5px;
+    padding-top: 10px;
+    font-size: 16px;
+    font-weight: 400; }
+  .formulariocontacto input {
+    display: block; }
 
 #formulario {
   text-align: center;
   margin: 5px; }
-
-.formulariocontacto label {
-  display: block;
-  padding-bottom: 5px;
-  padding-top: 10px;
-  font-size: 16px;
-  font-weight: 400; }
-
-.formulariocontacto input {
-  display: block; }
 
 .texto_formulario {
   width: 280px;
@@ -223,10 +215,9 @@ textarea {
   background-color: #f2e18d;
   margin: auto;
   transition: 0.3s; }
-
-#botonformulario:hover {
-  border: 3px #566890 solid;
-  transform: scale(1.2); }
+  #botonformulario:hover {
+    border: 3px #566890 solid;
+    transform: scale(1.2); }
 
 /*Recetas Saladas*/
 .contenedor {
@@ -241,49 +232,43 @@ textarea {
   width: 310px;
   height: 390px;
   flex-direction: column; }
-
-.elemento_galeriarecetas h3 {
-  font-size: 25px;
-  font-weight: 300;
-  width: 300px;
-  margin-top: 5px;
-  margin-bottom: 1px;
-  text-align: center;
-  color: #566890; }
-
-.elemento_galeriarecetas img {
-  width: 300px;
-  margin: 2px auto 2px auto; }
+  .elemento_galeriarecetas h3 {
+    font-size: 25px;
+    font-weight: 300;
+    width: 300px;
+    margin-top: 5px;
+    margin-bottom: 1px;
+    text-align: center;
+    color: #566890; }
+  .elemento_galeriarecetas img {
+    width: 300px;
+    margin: 2px auto 2px auto; }
 
 .galeriarecetas {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-items: center; }
+  justify-content: center; }
 
 /*RECETAS DULCES Y SALADAS CON PREPARACION*/
 .receta_d_s {
   margin: auto;
-  width: 80%; }
-
-.receta_d_s h2 {
-  font-size: 40px;
-  color: #566890;
-  font-weight: 400;
-  text-decoration: underline;
-  margin-bottom: 10px;
-  margin: auto;
-  text-align: center;
-  width: 100%; }
-
-.receta_d_s p {
-  font-weight: 300;
-  width: 80%;
-  margin: auto; }
-
-.receta_d_s img {
-  border: 2px solid #566890;
-  height: auto;
-  width: 60vw; }
+  width: 80% h2;
+    width-font-size: 40px;
+    width-color: #566890;
+    width-font-weight: 400;
+    width-text-decoration: underline;
+    width-margin-bottom: 10px;
+    width-margin: auto;
+    width-text-align: center;
+    width-width: 100%; }
+  .receta_d_s p {
+    font-weight: 300;
+    width: 80%;
+    margin: auto; }
+  .receta_d_s img {
+    border: 2px solid #566890;
+    height: auto;
+    width: 60vw; }
 
 .tiempoprep li {
   font-weight: 300;
@@ -301,20 +286,18 @@ textarea {
   color: #566890; }
 
 .ingredientes ul,
-ol {
+.ingredientes ol {
   font-weight: 300; }
 
 .ingredientes h3 {
   color: #566890;
   text-decoration: underline; }
 
-/*blog*/
-.articuloblog h3 {
-  color: #566890;
-  font-size: 25px; }
-
-.articuloblog iframe {
-  border-radius: 13px; }
+@media screen and (max-width: 760px) {
+  .galeriarecetas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center; } }
 
 /*RESPONSIVE PARA CELULAR*/
 @media screen and (max-width: 450px) {
@@ -340,5 +323,7 @@ ol {
     justify-items: center; }
   .formulariocontacto {
     width: 70vw; }
-  .texto_formulario, #dob, textarea {
+  .texto_formulario,
+  #dob,
+  textarea {
     width: 65vw; } }
