--- a/SCSS/_mediaqueries.scss
+++ b/SCSS/_mediaqueries.scss
@@ -1,8 +1,14 @@
-/*RESPONSIVE PARA CELULAR*/
+
+@media screen and (max-width: 760px){
+    .galeriarecetas {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+
+    }
+
+}/*RESPONSIVE PARA CELULAR*/
 @media screen and (max-width: 450px) {
-
-
-
     .container {
         width: 80%;
     }
@@ -10,10 +16,10 @@
     #lacocinademargarita {
         width: 100vw;
         font-size: 51px;
-      
+
     }
 
-    .seccioninicio h2{
+    .seccioninicio h2 {
         font-size: 40px;
     }
 
@@ -21,13 +27,13 @@
         flex-direction: column;
         height: 170px;
         width: 100vw;
-        margin:auto;
-       align-items: center;
+        margin: auto;
+        align-items: center;
     }
-  
+
     .recetainicio {
         margin: auto;
-        margin-top:10px;
+        margin-top: 10px;
     }
 
     .galeriarecetas {
@@ -36,16 +42,17 @@
         justify-items: center;
 
     }
-    .formulariocontacto{
+
+    .formulariocontacto {
         width: 70vw;
     }
-    
-    .texto_formulario, #dob, textarea{
+
+    .texto_formulario,
+    #dob,
+    textarea {
         width: 65vw;
 
     }
 
-
-
- 
 }
+
